# django-CRM

./: .gitignore  pyproject.toml  Описание БТ.docx  Описание ТЗ.docx
crm/accounts/: forms.py  urls.py  views.py
crm/ads/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crm/ads/migrations/: 0001_initial.py
crm/contracts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crm/contracts/migrations/: 0001_initial.py  0002_alter_contract_signed_at.py  0003_rename_summ_contract_cost_and_more.py  0004_contract_is_signed.py
crm/crm/: settings.py  urls.py
crm/customers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crm/customers/migrations/: 0001_initial.py  0002_alter_customer_contract_alter_customer_lead.py
crm/leads/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crm/leads/migrations/: 0001_initial.py  0002_remove_lead_user_lead_email_lead_first_name_and_more.py  0003_lead_is_active.py
crm/products/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crm/products/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_name_and_more.py
crm/templates/ads/: ads-detail.html
crm/templates/customers/: customers-list.html
crm/templates/products/: products-delete.html  products-detail.html
crm/templates/registration/: login.html
crm/tests/factories/: test_data_factory.py
crm/tests/fixtures/: one_test_product.py  test_data.py  test_products.json
crm/users/: urls.py  views.py
templates/contracts/: contracts-detail.html
(+10 files in other folders)
